Fix z-index mobile overlay

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -7,13 +7,9 @@
 }
 
 .mobile-menu--overlay {
-    @include mobile-portrait {
-        @include position(fixed, 10vh, 0, 0, 0);
-    }
-    @include position(fixed, 18vh, 0, 0, 0);
+    @include position(fixed, 0, 0, 0, 0);
     @include flex(row, center, center);
     background-color: $color-blue-bg;
-    z-index: 2;
 }
 
 .mobile-menu {
